src/modules/commando/skin/commando.less
@import url("chrome://komodo/skin/_config/window.less");

#commando-panel
{
    padding: 0;

    -moz-appearance: none;
    background: @window-background;
    color: @window-color;
    border: 1px solid rgba(0,0,0,0.3);
    border: @main-border;
}

#commando-search-wrapper
{
    margin-bottom: 1px;
    background: #FFF; /* In case @textbox-background is disabled */
    background: @textbox-background;
}

#commando-search
{
    font-size: 150%;
    padding: 10px;
    border: 0;
    margin: 0;
    background: transparent !important;

    -moz-appearance: none;
}

#commando-subscope
{
    visibility: collapse;
    font-weight: bold;
    padding: 3px;
    background-color: @list-listbox-row-background-selected;
    color: @list-listbox-item-color-selected;
    border-radius: 3px;
    max-width: 150px;
}

#commando-scope
{
    -moz-appearance: none;
    width: 40px;
    border: 0;
    margin: 0;
    
    & > .menulist-label-box
    {
        .menulist-label
        {
            visibility: collapse;
        }
    }

    menuitem .menu-iconic-left
    {
        visibility: visible;
        display: inherit;
    }
}

richlistbox#commando-results
{
    -moz-appearance: none;
    background: #FFF !important; /* In case @textbox-background is disabled */
    background: @textbox-background !important;
    border: 0;
    margin: 0;

    &:not(.has-results)
    {
        visibility: collapse;
    }

    scrollbox
    {
        overflow-x: hidden !important;
    }

    richlistitem
    {
        background-color: transparent;
        color: @window-color;
        padding: 5px;

        &:not(.compact) .compact
        {
            visibility: collapse;
        }

        &.compact .full
        {
            visibility: collapse;
        }

        &:nth-child(even)
        {
            background-color: rgba(0,0,0,0.05);
        }

        &[selected="true"]
        {
            background-color: @list-listbox-row-background-selected;
            color: @list-listbox-item-color-selected;
        }

        label.title
        {
            font-size: 120%;
            margin: 0 0 0 6px;
        }

        &:not(.compact) image
        {
            width: 32px;
            height: 32px;
            max-height: 32px;
        }

        &.compact image
        {
            width: 16px;
            height: 16px;
            max-height: 16px;
        }

        description
        {
            opacity: 0.7;
            margin: 0 0 0 6px;

            label
            {
                margin: 0;
                padding: 0;
                -moz-appearance: none;
            }
        }

        &.compact description
        {
            font-size: 120%;
        }

        description .strong
        {
            font-weight: bold;
        }

        description .em
        {
            font-style: italic;
            max-width: 100px;
            opacity: 0.7;
            margin-right: 5px;
        }
    }

}

